--- a/index.html
+++ b/index.html
@@ -3,21 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title></title>
+<script src="task5script.js"></script>
 </head>
 <body>
 <div id="output"></div>
-<script>
-  //задание 5
-	let ddiv=document.getElementById("output");
-	document.addEventListener("keydown",function(event)
-	{
-		if(event.key==" ")
-		{
-			ddiv.textContent+="_";
-		}
-		else{
-			ddiv.textContent+=event.key;
-		}
-		
-	});
-</script>
